--- a/src/variables.css
+++ b/src/variables.css
@@ -8,11 +8,13 @@
   /** Main vertical rhythm unit. Set as line-height on <body>. */
   --base-leading: theme('baseLeading');
 
-  --selection-background: var(--blue-80);
-  --selection-color: #fff;
   --background-color: var(--default-background-color);
   --text-color: var(--default-text-color);
+
   --heading-color: var(--blue-70);
+
+  --selection-background: var(--blue-30);
+  --selection-color: var(--text-color);
 
   --error-color: var(--red-60);
   --warning-color: var(--orange-60);
